--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "~1.11.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.7.4",
     "@react-navigation/stack": "^5.9.1",
@@ -16,6 +17,7 @@
     "expo-font": "~8.2.1",
     "expo-status-bar": "^1.0.2",
     "native-base": "^2.13.14",
+    "node-fetch": "^2.6.1",
     "react": "~16.11.0",
     "react-base": "^0.2.0",
     "react-dom": "~16.11.0",
@@ -24,13 +26,13 @@
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.4.0",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0",
-    "@react-native-community/async-storage": "~1.11.0"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
